Creacion de componente navbar para mejor manejo, carga del nombre del usuario y avences de registro conectado al api, correccion del menu en inisio y cierre de sesion

--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
     <div class="row">
         <!--Left Menu starts-->
-        <div id="leftMenu" class="col-md-12 col-lg-2 text-left">
-            <ul class="list-group list-group-flush">
+        <div id="leftMenu" class="col-md-12 col-lg-12 text-left fixed-bottom">
+            <ul class="list-group list-group-horizontal">
 
                 <li id="titles" class="list-group-item">
                     <a href="#">
@@ -32,7 +32,7 @@
         </div>
         <!--Left Menu Ends-->
         <!--Main Content Starts-->
-        <div class="col-md-12 col-lg-10">
+        <div class="col-md-12 col-lg-12 ">
 
             <div class="verticalCenter my-3">
                 <div id="containerBox" class="container animated fadeInRight ">
