--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -3,7 +3,7 @@
   <!--User Name-->
   <div class="row mb-2">
     <div class="col-12">
-      <h2 class="titles">Hola, Sebastian.</h2>
+      <h2 class="titles">Hola, {{nombre}}.</h2>
     </div>
   </div>
   <!--Modules-->
