--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,82 +1,6 @@
 <div class="container-fluid">
   <!--Nav Bar starts-->
-  <div *ngIf="tokenActive" class="row">
-    <div id="containerNav" class="col-lg-12">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand px-5 py-2" href="#">
-          <img src="../../../assets/Logo.png" width="100" height="ms-auto" class="d-inline-block align-top" alt=""
-            loading="lazy">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item  pr-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Inicio <span
-                  class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item px-3">
-              <a routerLink="/createEmployees" routerLinkActive="active" class="nav-link titles" href="#">Empleados</a>
-            </li>
-            <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Pedidos</a>
-            </li>
-            <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Finanzas</a>
-            </li>
-            <li class="nav-item px-3">
-              <a routerLink="/home" routerLinkActive="active" class="nav-link titles" href="#">Despacho</a>
-            </li>
-            <li class="nav-item px-3">
-              <a (click)="logOut()" class="nav-link titles text-danger" href="#">Cerrar Sesión</a>
-            </li>
-          </ul>
-
-          <li id="searchButton" class="nav-item dropdown navbar-text">
-            <a class="nav-link dropdown-toggle titles" href="http://example.com" id="navbarDropdownMenuLink"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Buscar
-            </a>
-            <ul class="dropdown-menu dropdown-menu-lg-right text-center" aria-labelledby="navbarDropdownMenuLink">
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
-                  href="#">Empleados</a>
-                <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Crear Empleado</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Ver Empleado</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Modificar</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Eliminar*</a>
-                </ul>
-              </li>
-              <li><a class="dropdown-item titles" href="#">Pedidos</a></li>
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
-                  href="#">Finanzas</a>
-                <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Finanzas</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">Registro</a>
-                </ul>
-              </li>
-
-              <li class="dropdown-submenu dropleft"><a class="dropdown-item dropdown-toggle titles" data-toggle="dropdown"
-                  href="#">Despacho</a>
-                <ul class="dropdown-menu">
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">A</a>
-                  <a routerLink="/createEmployees" routerLinkActive="active" class="dropdown-item titles" href="#">b</a>
-                </ul>
-              </li>
-            </ul>
-          </li>
-
-
-          <picture>
-            <img id="userLogo" src="../../../assets/Iconos/people.svg" width="45" height="45"
-              class="d-inline-block align-top mx-4" alt="" loading="lazy">
-          </picture>
-        </div>
-      </nav>
-    </div>
-  </div>
+    <app-nav-bar></app-nav-bar>
   <!--Nav Bar ends-->
   <div class="row">
     <div id="router" class="col-lg-12">
