--- a/src/app/Pages/create-employees/create-employees.component.html
+++ b/src/app/Pages/create-employees/create-employees.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
     <div class="row">
         <!--Left Menu starts-->
-        <div id="leftMenu" class="col-md-12 col-lg-12 text-left fixed-bottom">
-            <ul class="list-group list-group-horizontal">
+        <div id="leftMenu" class="col-md-12 col-lg-2 text-left ">
+            <ul class="list-group ">
 
                 <li id="titles" class="list-group-item">
                     <a href="#">
@@ -32,7 +32,7 @@
         </div>
         <!--Left Menu Ends-->
         <!--Main Content Starts-->
-        <div class="col-md-12 col-lg-12 ">
+        <div class="col-md-12 col-lg-8 ">
 
             <div class="verticalCenter my-3">
                 <div id="containerBox" class="container animated fadeInRight ">
@@ -113,21 +113,48 @@
                                 </div>
 
                                 <div class="form-group mb-4 px-5">
-                                    <label for="exampleFormControlFile1" class="titles">Ingresa tú foto</label>
+                                    <label for="exampleFormControlFile1" class="titles">Ingresar foto empleado</label>
                                     <input type="file" class="form-control-file titles text-wrap"
                                         id="exampleFormControlFile1">
                                 </div>
 
-                                <div class="form-check form-check-inline">
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="ventas">
-                                        <label class="custom-control-label titles" for="ventas">Ventas</label>
+                                <!--Modulos disponibles-->
+                                <div class="px-5">
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="ventas">
+                                            <label class="custom-control-label titles" for="ventas">Usuarios</label>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="pedidos">
-                                        <label class="custom-control-label titles" for="pedidos">Pedidos</label>
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="ventas">
+                                            <label class="custom-control-label titles" for="ventas">Noticias</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="ventas">
+                                            <label class="custom-control-label titles" for="ventas">Clientes</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="ventas">
+                                            <label class="custom-control-label titles" for="ventas">Pedidos</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="ventas">
+                                            <label class="custom-control-label titles" for="ventas">Finanzas</label>
+                                        </div>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <div class="custom-control custom-switch">
+                                            <input type="checkbox" class="custom-control-input" id="pedidos">
+                                            <label class="custom-control-label titles" for="pedidos">Despacho</label>
+                                        </div>
                                     </div>
                                 </div>
 
