--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="col-sm-12 col-lg-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                <input class="form-check-input" type="checkbox" [(ngModel)]="isChecked"  name="rememberMe" id="rememberMe">
                                 <label class="form-check-label titles" for="defaultCheck1">
                                    Recordar
                                 </label>
