--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -9,7 +9,7 @@
   <!--Modules-->
   <div class="row">
     <!--Col 1-->
-    <div class="col-md-12 col-lg-6 mb-3">
+    <div class="col-md-12 col-lg-6 mb-3 scrollable">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -98,8 +98,8 @@
     <div class="cols-md-12 col-lg-6 fixed">
       <div class="container">
         <div class="row">
-          <div class="col-12">
-            <!--Col 2-->
+          <div class="col-12 scrollable">
+            <!--Col 2 starts-->
             <div class="card bg-secondary mb-4">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
