--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -26,7 +26,8 @@
 
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Crear Empleado</a></li>
-                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Ver Empleados (CC/Todos)</a></li>
+                    <li class="list-group-item titles"><a routerLink="/createEmployees" href="#">Ver Empleados
+                        (CC/Todos)</a></li>
                     <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Modificar</a></li>
                     <li class="list-group-item titles"><a routerLink="/createEmployees" href="">Eliminar*</a></li>
                   </ul>
@@ -103,18 +104,9 @@
             <div class="card bg-secondary mb-4">
               <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                  <h1 class="titles">Bioseguridad</h1>
-                  <p class="text">No olvides siempre de llevar el tapabocas en todo momento</p>
-                  <footer class="blockquote-footer text-right text">Actualización de Myryam Hernandez</footer>
-                </blockquote>
-              </div>
-            </div>
-            <!--Col 2-->
-            <div class="card bg-secondary mb-4">
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
                   <h1 class="titles">Politica de privacidad y uso de Datos</h1>
-                  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde inventore dolore
+                  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut praesentium unde
+                    inventore dolore
                     voluptate nam delectus, nesciunt ab, architecto itaque? Quisquam numquam placeat nisi blanditiis
                     deserunt! Mollitia, quibusdam quod? Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Molestias, beatae porro voluptatem vel velit amet minima laborum consectetur autem quas eligendi
@@ -126,7 +118,38 @@
                     praesentium exercitationem explicabo rem, placeat veniam, voluptatem culpa temporibus. Velit,
                     facere!
                   </p>
-                  <footer class="blockquote-footer text-right text">Actualización de Myryam Hernandez</footer>
+                  <div class="continer-fluid">
+                    <div class="row">
+                      <div class="col text-left text-muted">20 de Julio 2020</div>
+                      <div class="col text-right text-muted">Actualización de Myryam
+                        Hernandez</div>
+                    </div>
+                    <div class="row mt-3">
+                      <div class="col">
+                        <div class="row">
+                          <div id="usersPic" class="col"> 
+                            <img id="userLogo1" src="../../../assets/Iconos/people.svg" width="45"
+                              height="45" class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                            <img id="userLogo2" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                              class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                            <img id="userLogo3" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                              class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                            <img id="userLogo4" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                              class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                            <img id="userLogo5" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                              class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                          </div>
+                        </div>
+                        <div class="row">
+                          <small class="form-text text-muted col-12">Visto por</small>
+                        </div>
+
+                      </div>
+                      <div class="col">
+                        <button type="button" class="btn btn-danger btn-block mt-2">Confirmar lectura</button>
+                      </div>
+                    </div>
+                  </div>
                 </blockquote>
               </div>
             </div>
