--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -127,9 +127,9 @@
                     <div class="row mt-3">
                       <div class="col">
                         <div class="row">
-                          <div id="usersPic" class="col"> 
-                            <img id="userLogo1" src="../../../assets/Iconos/people.svg" width="45"
-                              height="45" class="d-inline-block align-top  userLogo" alt="" loading="lazy">
+                          <div id="usersPic" class="col">
+                            <img id="userLogo1" src="../../../assets/Iconos/people.svg" width="45" height="45"
+                              class="d-inline-block align-top  userLogo" alt="" loading="lazy">
                             <img id="userLogo2" src="../../../assets/Iconos/people.svg" width="45" height="45"
                               class="d-inline-block align-top  userLogo" alt="" loading="lazy">
                             <img id="userLogo3" src="../../../assets/Iconos/people.svg" width="45" height="45"
@@ -141,9 +141,13 @@
                           </div>
                         </div>
                         <div class="row">
-                          <small class="form-text text-muted col-12">Visto por</small>
+                          <small class="form-text text-muted col-12">Visto por: <button type="button"
+                              class="btn" data-container="body" data-toggle="popover"
+                              data-placement="right"
+                              data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
+                              +3
+                            </button></small>
                         </div>
-
                       </div>
                       <div class="col">
                         <button type="button" class="btn btn-danger btn-block mt-2">Confirmar lectura</button>
